# llm.nvim

./: .editorconfig  .luarc.json  LICENSE  Makefile  README.md  neovim.yml  selene.toml
.github/workflows/: commitlint.yml  tag-conflicts.yml
lua/hfcc/: completion.lua  config.lua  hf.lua  init.lua  keymaps.lua  utils.lua
lua/llm/: completion.lua  config.lua  hf.lua  init.lua  keymaps.lua  language_server.lua  utils.lua
tests/mock_server/: Cargo.toml
tests/mock_server/src/: main.rs
